--- a/video.html
+++ b/video.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<head>
+  <meta charset="UTF-8">
+  <title>Podcast</title>
+</head>
+<body>
+ <video width="640" height="480" controls>
+  <source src="podcast.mov" type="video/mov">
+</video> 
+</body>
+</html>
