very close to finish

--- a/main/project.html
+++ b/main/project.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>P2E project</title>
-    <link rel="stylesheet" href="css-backbone.css">
+    <link rel="stylesheet" href="../css/css-backbone.css">
 </head>
 <body>
     <p id="note">This is the website for my P2E project for this year. Last year I used Google Sites to do this whole thing. This year, after recording and doing all of the other work, I decided to make this website.</p> 
@@ -20,5 +20,6 @@
             <h3>Resources</h3>
             <p>Check out the resources page below, where you can find all of my links and stuff for my project.</p>
         </div>
-
+        <a href="../Resources/resources.html" class="btn">Resources</a>
 </body>
+</html>
