--- a/Resources/credits.html
+++ b/Resources/credits.html
@@ -9,5 +9,12 @@
 <body>
     <p>In order to create this website, I used GitHub to hold the repository and VS Code for the Web to code the HTML.</p>
     <p>Claude AI was used to write the CSS stylesheet (I'm not very good at writing CSS and it sped this process up a lot) and also to format a lot of things that I had written before for HTML.</p>
-    <p>I wrote basically everything else, including the content of the website, the podcast scripts, and the HTML code
+    <p>I wrote basically everything else, including the content of the website, the podcast scripts, and the HTML code.
+    <p>CapCut - all video editing
+    <p>ElonTalks - AI videos used in advertisement
+    <p>Gallup - polls about trust in media
+    <p>Canva - script cover
+    <p>Intro music from NBC news, written by John Williams
+    <p>All
+
 </body>
