--- a/Resources/resources.html
+++ b/Resources/resources.html
@@ -19,6 +19,7 @@
             <li><a href="partisan-trust.png" class="btn">Trust differences based on party (2024)</a></li>
             <li><a href="trust-in-media.png" class="btn">Americans' trust in the mass media</a></li>
             <li><a href="credits.html" class="btn">Project Credits</a></li>
+            <li><a href="podcast.mp3" class="btn">Listen to the Podcast</a></li>
         </ul>
     </div>
 </body>
