--- a/Resources/credits.html
+++ b/Resources/credits.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The History of the Media</title>
     <link rel="stylesheet" href="../css/css-backbone.css">
-</html>
+</head>
 <body>
     <p>In order to create this website, I used GitHub to hold the repository and VS Code for the Web to code the HTML.</p>
     <p>Claude AI was used to write the CSS stylesheet (I'm not very good at writing CSS and it sped this process up a lot) and also to format a lot of things that I had written before for HTML.</p>
@@ -15,6 +15,7 @@
     <p>Gallup - polls about trust in media
     <p>Canva - script cover
     <p>Intro music from NBC news, written by John Williams
-    <p>All
+    <p>Credits to Ms. Lesiak, the P2E director.
 
 </body>
+</html>
