--- a/Resources/media-history.html
+++ b/Resources/media-history.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The History of the Media</title>
     <link rel="stylesheet" href="../css/css-backbone.css">
-</html>
+</head>
 <body>
     <h1>The History of the Media</h1>
     <ul>
